name:           spl-scheme
version:        0.1.0.0
synopsis:       Mini implementation of Scheme language written in Haskell
homepage:       https://github.com/krzemin/spl-scheme
author:         Piotr Krzemiński, Błażej Saladra
maintainer:     pio.krzeminski@gmail.com
category:       Language
build-type:     Simple
cabal-version:  >=1.8

executable spl-scheme
  build-depends:   
                   base >= 4,
                   parsec >=3.1.3 && <3.2
  hs-source-dirs:  src
  ghc-options:     -Wall -rtsopts  -main-is InterpretMain
  main-is:         InterpretMain.hs
  other-modules:   
                   Ast,
                   Parser

executable spl-scheme-repl
  build-depends:   
                   base >= 4,
                   parsec >=3.1.3 && <3.2
  hs-source-dirs:  src
  ghc-options:     -Wall -rtsopts -main-is ReplMain
  main-is:         ReplMain.hs
  other-modules:   
                   Ast,
                   Parser

test-suite AstTestSuite
  type:            exitcode-stdio-1.0
  ghc-options:     -Wall -rtsopts
  build-depends:   base >= 4,
                   HTF > 0.9,
                   parsec >=3.1.3 && <3.2
  other-modules:   
                  Ast,
                  AstTest,
                  Parser,
                  ParserTest
  hs-source-dirs:  
                  test,
                  src
  main-is:         AstTestSuite.hs

