name:           spl-scheme
version:        0.1.0.0
synopsis:       Mini implementation of Scheme language written in Haskell
homepage:       https://github.com/krzemin/spl-scheme
author:         Piotr Krzemiński, Błażej Saladra
maintainer:     pio.krzeminski@gmail.com
category:       Language
build-type:     Custom
cabal-version:  >=1.8

executable spl-scheme
  build-depends:   
                   base >= 4,
                   parsec >=3.1.3 && <3.2,
                   containers >=0.5.0 && <0.6
  hs-source-dirs:  src
  ghc-options:     -Wall -rtsopts  -main-is InterpretMain
  main-is:         InterpretMain.hs
  other-modules:   
                   Parser,
                   Eval,
                   Expr

executable spl-scheme-repl
  build-depends:   
                   base >= 4,
                   parsec >=3.1.3 && <3.2,
                   containers >=0.5.0 && <0.6
  hs-source-dirs:  src
  ghc-options:     -Wall -rtsopts -main-is ReplMain
  main-is:         ReplMain.hs
  other-modules:   
                   Parser,
                   Eval,
                   Expr
