name:           spl-scheme
version:        0.1.0.0
synopsis:       Mini implementation of Scheme language written in Haskell
homepage:       https://github.com/krzemin/spl-scheme
author:         Piotr Krzemiński, Błażej Saladra
maintainer:     pio.krzeminski@gmail.com
category:       Language
build-type:     Custom
cabal-version:  >=1.8

executable spl-scheme
  build-depends:   
                   base >= 4,
                   parsec >=3.1.3 && <3.2,
                   containers >=0.5.0 && <0.6,
                   readline >= 1.0.3,
                   MissingH
  hs-source-dirs:  src
  ghc-options:     -Wall -rtsopts -main-is Main
  main-is:         Main.hs
  other-modules:   
                   Parser,
                   Eval,
                   Expr,
                   Sugar,
                   Types


test-suite spl-scheme-test
  type:            exitcode-stdio-1.0
  ghc-options:     -Wall -rtsopts -main-is MainTestSuite
  main-is:         MainTestSuite.hs
  build-depends:   base >= 4,
                   HTF > 0.9,
                   parsec >=3.1.3 && <3.2,
                   containers >=0.5.0 && <0.6,
                   MissingH
  other-modules:   Parser, Eval, Expr, Sugar, Types, MainTest
  hs-source-dirs:  src, test
